--- a/src/app/tablinks/tablinks.page.html
+++ b/src/app/tablinks/tablinks.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="top" color="tertiary">
+  <ion-tab-bar slot="top" color="gray">
     
     <ion-tab-button tab="profile">
       <ion-icon name="person-circle-outline"></ion-icon>
@@ -8,12 +8,12 @@
     </ion-tab-button>
 
     <ion-tab-button tab="gallery">
-      <ion-icon name="image-outline"></ion-icon>
+      <ion-icon ios="ios-photos" md="md-photos"></ion-icon>
       <ion-label>Gallery</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="contacts">
-      <ion-icon name="people-circle-outline"></ion-icon>
+      <ion-icon ios="ios-contacts" md="md-contacts"></ion-icon>
       <ion-label>Contacts</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
