--- a/src/app/contacts/contacts.page.html
+++ b/src/app/contacts/contacts.page.html
@@ -1,163 +1,53 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Contacts
+  Add Contact
     </ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="addUser()">
+        
+        <ion-icon slot="icon-only" name="person-add-outline" size="large" color="dark"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Contacts</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="contacts page"></app-explore-container>
-  <ion-searchbar></ion-searchbar>
-
-    <ion-item button (click)="testClick()">
-      <ion-avatar slot="start">
-        <img src="assets/contacts/eunbi.jpg">
-      </ion-avatar>
-      <ion-label>
-        <h2>Kwon Eunbi</h2>
-        <p>silver_rain.__</p>
-      </ion-label>
-      <ion-icon name="logo-instagram"></ion-icon>
-      <ion-button shape="round">Follow</ion-button>
+<ion-content fullscreen class="component-content">
+<ion-accordion-group *ngFor="let contact of contactlist; let i = index">
+  <ion-accordion value="contacts">
+    <ion-item slot="header">
+      <ion-item-sliding>
+        <ion-item-options side="start">
+          <ion-item-option (click)="confirmation(i)"><ion-icon size="large" name="trash" color="danger"></ion-icon></ion-item-option>
+          <ion-item-option  (click)="sendMessage()">  <ion-icon size="large" name="mail" color="dark"></ion-icon></ion-item-option>
+        </ion-item-options>
+    
+        <ion-item color="light"> 
+            <ion-thumbnail slot="start"class="thumb">
+            <img src="assets/profile.jpg">
+            </ion-thumbnail>
+          <ion-label >{{ contact.name }}</ion-label>
+    
+        </ion-item>
+      </ion-item-sliding>
+    
     </ion-item>
 
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/sakura.jpg">
-    </ion-avatar>
-    <ion-label>
-        <h2>Miyawaki Sakura</h2>
-        <p>39saku_chan</p>
-    </ion-label>
-    <ion-icon name="logo-instagram"></ion-icon>
-    <ion-button shape="round">Follow</ion-button>
-  </ion-item>
+    <ion-list slot="content" >
+      <ion-item>
+        <ion-thumbnail slot="start" >
+          </ion-thumbnail>
+          <ion-icon name="mail-outline"></ion-icon>
+        <ion-label >{{ contact.email}}</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          </ion-thumbnail>
+          <ion-icon name="call-outline"></ion-icon>
+        <ion-label>{{ contact.number }}</ion-label>
+      </ion-item>
 
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/hyewon.jpg">
-    </ion-avatar>
-    <ion-label>
-        <h2>Hye Won</h2>
-        <p>hyemhyemu</p>
-    </ion-label>
-    <ion-icon name="logo-instagram"></ion-icon>
-    <ion-button shape="round">Follow</ion-button>
-  </ion-item>
+    </ion-list>
+  </ion-accordion>
+  </ion-accordion-group>
 
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/yena.jpg">
-    </ion-avatar>
-        <ion-label>
-          <h2>Choi Ye Na</h2>
-          <p>yena.jigumina</p>
-        </ion-label>
-        <ion-icon name="logo-instagram"></ion-icon>
-        <ion-button shape="round">Follow</ion-button>
-  </ion-item>
-
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/chaeyeon.jpg">
-    </ion-avatar>
-        <ion-label>
-          <h2>Lee Chae Yeon</h2>
-          <p>chaestival_</p>
-        </ion-label>
-        <ion-icon name="logo-instagram"></ion-icon>
-        <ion-button shape="round">Follow</ion-button>
-  </ion-item>
-
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/chaewon.jpg">
-    </ion-avatar>
-        <ion-label>
-          <h2>Kim Chae Won</h2>
-          <p>_chaechae_1</p>
-        </ion-label>
-        <ion-icon name="logo-instagram"></ion-icon>
-        <ion-button shape="round">Follow</ion-button>
-  </ion-item>
-
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/minju.jpg">
-    </ion-avatar>
-    <ion-label>
-        <h2>Kim Min Ju</h2>
-        <p>minn.__.ju</p>
-    </ion-label>
-    <ion-icon name="logo-instagram"></ion-icon>
-    <ion-button shape="round">Follow</ion-button>
-  </ion-item>
-
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/hitomi.jpg">
-    </ion-avatar>
-    <ion-label>
-        <h2>Honda Hitomi</h2>
-        <p>10_hitomi_06</p>
-    </ion-label>
-    <ion-icon name="logo-instagram"></ion-icon>
-     <ion-button shape="round">Follow</ion-button>
-  </ion-item>
-
-    <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/nako.jpg">
-    </ion-avatar>
-    <ion-label>
-        <h2>Yabuki Nako</h2>
-        <p>75_yabuki</p>
-    </ion-label>
-    <ion-icon name="logo-instagram"></ion-icon>
-    <ion-button shape="round">Follow</ion-button>
-  </ion-item>
-    
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/yuri.jpg">
-    </ion-avatar>
-    <ion-label>
-        <h2>Yu Ri</h2>
-        <p>zo__glasss</p>
-    </ion-label>
-    <ion-icon name="logo-instagram"></ion-icon>
-    <ion-button shape="round">Follow</ion-button>
-  </ion-item>
-
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/yujin.jpg">
-    </ion-avatar>
-    <ion-label>
-        <h2>Ahn Yu Jin</h2>
-        <p>_yujin_an</p>
-    </ion-label>
-    <ion-icon name="logo-instagram"></ion-icon>
-    <ion-button shape="round">Follow</ion-button>
-  </ion-item>
-
-  <ion-item button (click)="testClick()">
-    <ion-avatar slot="start">
-      <img src="assets/contacts/wonyoung.jpg">
-    </ion-avatar>
-    <ion-label>
-        <h2>Jang Won Young</h2>
-        <p>for_everyoung10</p>
-    </ion-label>
-    <ion-icon name="logo-instagram"></ion-icon>
-    <ion-button shape="round">Follow</ion-button>
-  </ion-item>
-  
-</ion-content>
+ 
